--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
 
     <h1>Play Rock, Paper, Scissors</h1>
-    <img src="" alt="">
+    <img src="./assets/images/RPS.png" alt="Rock Paper Scissors Rules">
 
-    <script src="script.js"></script>
+    <script src="./assets/scripts/script.js"></script>
 
 </body>
 </html>
